--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -43,23 +43,20 @@
   justify-content: space-between;
   max-width: 590px;
   width: 60%;
-  position: relative;
+
   padding-top: 6%;
   margin-left: 19%;
+
+  position: relative;
 }
 
 .gallery__button {
   @include reset-button;
 
-  position: absolute;
-  top: 58%;
-  left: 14px;
-
   width: 27px;
   height: 27px;
   border-radius: 50%;
   background-color: $blue;
-
   z-index: 2;
 }
 
@@ -136,11 +133,21 @@
   width: 2px;
 }
 
+.gallery__button-wrap {
+  position: absolute;
+  width: 27px;
+  height: 27px;
+
+  top: 61%;
+  left: 13px;
+}
+
 .gallery__description-popup {
   display: block;
   position: absolute;
-  left: 33px;
-  top: -86px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -174px;
   background-color: $white;
   width: 352px;
   border-radius: 10px;
@@ -150,7 +157,7 @@
   background-size: 71px 71px;
   background-position: top 4px right 27px;
 
-  z-index: 5;
+  z-index: 1600;
 
   &--hidden {
     display: none;
@@ -312,10 +319,20 @@
     margin-left: 10%;
   }
 
+  .gallery__button-wrap {
+    width: 20px;
+    height: 20px;
+    left: 0;
+  }
+
   .gallery__description-popup {
-    left: -100%;
-    width: 200%;
-    top: -173px;
+    left: -144%;
+
+    width: 100vw;
+    max-width: 320px;
+
+
+    top: -220px;
     padding: 15px 42px 19px 24px;
     background-position: top 9px right 27px;
     background-size: 60px 60px;
